--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 server.servlet.context-path=/ecommerce
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,5 +10,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/gesfor
 spring.datasource.username=postgres
 spring.datasource.password=91696192
 
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:insert.sql
+spring.datasource.data=classpath:insert_cliente.sql,classpath:insert_produto.sql
