--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^4.5.2",
     "core-js": "^2.5.4",
     "jquery": "^3.5.1",
+    "ngx-currency": "^2.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
+    "sweetalert2": "^10.3.5",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
