--- a/frontend/src/main/web/angular.json
+++ b/frontend/src/main/web/angular.json
@@ -23,6 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css",
               "node_modules/sweetalert2/src/sweetalert2.scss"
@@ -129,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "np-app"
+  "defaultProject": "np-app",
+  "cli": {
+    "analytics": false
+  }
 }
