--- a/frontend/src/main/web/package.json
+++ b/frontend/src/main/web/package.json
@@ -24,9 +24,12 @@
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.2",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ngx-currency": "^2.5.1",
     "popper.js": "^1.16.1",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.2",
     "rxjs": "^6.6.3",
     "sweetalert2": "^10.3.5",
     "zone.js": "~0.10.3"
